--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <div class="container mx-auto text-center">
             <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight">Ace Your Cognizant Technical Exam</h1>
             <p class="mt-2 text-lg text-gray-300">Your Ultimate Guide for GenC, GenC Pro & GenC Next Roles</p>
+            <p>!!!!----Just for Refferance dont just prepare these alone----!!!!</p>
         </div>
     </header>
 
@@ -384,3 +385,4 @@
     </script>
 </body>
 </html>
+
