--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <header class="bg-[#073B4C] text-white p-6 shadow-lg">
         <div class="container mx-auto text-center">
-            <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight">Ace Your Cognizant Technical Exam</h1>
+            <h1 class="text-4xl md:text-5xl font-extrabold tracking-tight">Master the Cognizant Cluster-2 Exam</h1>
             <p class="mt-2 text-lg text-gray-300">Your Ultimate Guide for GenC, GenC Pro & GenC Next Roles</p>
             <p><b>!!!!----Just for Refferance dont just prepare these alone----!!!!</b></p>
         </div>
@@ -385,5 +385,6 @@
     </script>
 </body>
 </html>
+
 
 
